# risc0-foundry-template

./: .env.anvil  .gitignore  .gitmodules  Cargo.toml  Cargo.toml.guest.risc0  Cargo.toml.risc0  Dockerfile  Makefile  README.md  code-walktrhough.md  deployment-guide.md  diff.patch  docker-compose.yml  foundry.toml  hardhat.config.ts  justfile  package.json  remappings.txt  rust-toolchain.toml  tsconfig.json
.cargo/: config.toml
.github/actions/cargo-risczero-install/: action.yaml
.github/workflows/: clean.yml  linear.yml  lint.yml  main.yml  test.yml
application/: Cargo.toml  README.md
application/src/: lib.rs
apps/: Cargo.toml  README.md
apps/src/: lib.rs
apps/tests/: merkle_tree.rs
cli/: Cargo.toml  README.md
cli/src/: contract_interface.rs  interface.rs  lib.rs  main.rs  utils.rs
contracts/: BaselineGovernor.sol  BonsaiGovernor.sol  BonsaiGovernorCounting.sol  BonsaiStarter.sol  BonsaiStarterLowLevel.sol  Cargo.toml  ETHMixer.sol  ETHTornado.sol  EvenNumber.sol  IBonsaiGovernor.sol  IEvenNumber.sol  MerkleTreeWithHistory.sol  Mixer.sol  README.md  RiscZeroVerifier.sol  Starter.sol  Tornado.sol  VoteToken.sol  build.rs
contracts/test/: BonsaiCheats.sol
contracts/verify/: IRiscZeroVerifier.sol  MockVerifier.sol
contracts/verify/groth16/: RiscZeroG16Verifier.sol
core/: Cargo.toml
core/src/: lib.rs
host/: Cargo.toml
host/src/: contract_interface.rs  main.rs  seal.rs
lib/bonsai-lib-sol/src/: BonsaiCallbackReceiver.sol  BonsaiCheats.sol  BonsaiLowLevelCallbackReceiver.sol  BonsaiRelay.sol  BonsaiRelayQueueWrapper.sol  BonsaiTest.sol  BonsaiTestRelay.sol  Groth16Verifier.sol  IBonsaiRelay.sol  RiscZeroVerifier.sol
lib/bonsai-lib-sol/test/: RiscZeroVerifier.t.sol
methods/: Cargo.toml  README.md  build.rs
methods/guest/: Cargo.toml  README.md
methods/guest/src/: README.md
methods/src/: guest_list.rs  lib.rs  main.rs
publisher/: Cargo.toml
publisher/src/: main.rs  utils.rs
relay/: Cargo.toml  build.rs
relay/artifacts/BonsaiRelay.sol/: BonsaiRelayContract.json
relay/artifacts/proxy.sol/: Proxy.json
relay/contracts/: BonsaiRelay.sol  proxy.sol
relay/examples/: callback_request.rs  offchain_request.rs  publish.rs
relay/src/: lib.rs  main.rs
relay/src/downloader/: mod.rs
relay/src/downloader/bonsai/: mod.rs  proxy_callback_proof_processor.rs  proxy_callback_proof_request_stream.rs
relay/src/downloader/common/: event_processor.rs  event_stream.rs  mod.rs
relay/src/proxy-contract/: Cargo.toml
relay/src/proxy-contract/artifacts/bpn_dummy.sol/: BPNDummy.json
relay/src/proxy-contract/artifacts/callback_dummy.sol/: CallbackDummy.json
relay/src/proxy-contract/artifacts/ibpn.sol/: IBPN.json
relay/src/proxy-contract/artifacts/proxy.sol/: Proxy.json
relay/src/proxy-contract/contracts/: bpn_dummy.sol  ibpn.sol  proxy.sol
relay/src/proxy-contract/src/: lib.rs  main.rs
relay/src/storage/: in_memory.rs  mod.rs
relay/src/uploader/: mod.rs
relay/src/uploader/bonsai/: mod.rs
relay/src/uploader/bonsai/completed_proofs/: complete_proof.rs  error.rs  manager.rs  mod.rs
relay/src/uploader/bonsai/pending_proofs/: manager.rs  mod.rs  pending_proof_request_future.rs
relay/tests/: bonsai_pending_proof_requests.rs  e2e_test.rs  events.rs  manager.rs  proxy_stream_runner.rs
relay/tests/solidity/contracts/: BonsaiContract.sol  Counter.sol  ProxyTest.sol
relay/tests/utils/: mod.rs  test_callback_proof_request_processor.rs
script/: BonsaiDeploy.sol  Deploy.s.sol  MainnetDeploy.s.sol  config.toml  test_r0_upa
script/configs/mainnet/: deploy_mainnet_config.json
script/configs/sepolia/: deploy_sepolia_config.json
scripts/: Deploy.s.sol
sdk/: Cargo.toml
sdk/src/: bonsai.rs  cli.rs  eth.rs  ethers.rs  lib.rs  prover.rs  snark.rs
src/: deploy.ts  index.ts  submit.ts
tests/: BonsaiStarter.t.sol  BonsaiStarterLowLevel.t.sol  BonsaiStarterOffChainRequest.t.sol  BonsaiStarterOnChainRequest.t.sol  EvenNumber.t.sol  Governor.t.sol  MerkleTree.t.sol  MockRiscZeroVerifier.sol  RiscZeroGroth16VerifierTest.sol  RiscZeroVerifier.t.sol  Starter.t.sol
