[workspace]
resolver = "2"
members = ["apps", "methods"]
exclude = ["lib"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
alloy = { version = "0.9", features = ["full"] }
alloy-primitives = { version = "0.8", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.8" }
anyhow = { version = "1.0.75" }
bincode = { version = "1.3" }
bytemuck = { version = "1.14" }
hex = { version = "0.4" }
log = { version = "0.4" }
methods = { path = "./methods" }
risc0-build = { version = "1.2", features = ["docker"] }
# using git references here to ensure this matches the submodules in ./lib
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.3.1" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.3.1" }
risc0-zkvm = { version = "1.2", default-features = false }
risc0-zkp = { version = "1.2", default-features = false }
serde = { version = "1.0", features = ["derive", "std"] }
url = { version = "2.5" }

[profile.release]
debug = 1
lto = true
