[workspace]
resolver = "2"
members = ["apps", "methods"]
exclude = ["lib"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
alloy = { version = "0.15", features = ["full"] }
alloy-primitives = { version = "1.0", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "1.0" }
anyhow = { version = "1.0.75" }
bincode = { version = "1.3" }
bytemuck = { version = "1" }
hex = { version = "0.4" }
log = { version = "0.4" }
methods = { path = "./methods" }
risc0-build = { version = "2.0.1", features = ["docker"] }
# using git references here to ensure this matches the submodules in ./lib
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.1.0" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.1.0" }
risc0-zkvm = { version = "2.0.2" }
risc0-zkp = { version = "2.0.1", default-features = false }
serde = { version = "1.0", features = ["derive", "std"] }
url = { version = "2.5" }

[profile.release]
debug = 1
lto = true
