[package]
name = "apps"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-merkle-tree = { workspace = true }
mvm-core = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
hex.workspace = true
log = { workspace = true }
methods = { workspace = true }
num-bigint = { workspace = true }
rand = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }
sha2 = { workspace = true }
tokio = { version = "1.35", features = ["full"] }
url = { workspace = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
