[package]
name = "apps"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
bytemuck = "1"
clap = { version = "4.0", features = ["derive", "env"] }
methods = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true, default-features = true }
tokio = { version = "1.35", features = ["full"] }
url = { workspace = true }
