[package]
name = "bonsai-starter-host"
version = "0.1.0"

[dependencies]
alloy-primitives = { version = "0.4", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.4" }
anyhow = { version = "1.0.75" }
bincode = { version = "1.3" }
bonsai-sdk = { version = "0.6.0-rc.1" }
bytemuck = { version = "1.14" }
clap = { version = "4.0", features = ["derive"] }
env_logger = { version = "0.10" }
ethers = { version = "2.0" }
hex = { version = "0.4" }
log = { version = "0.4" }
methods = { workspace = true }
risc0-build = { version = "0.20.0-rc.2", features = ["guest-list"] }
risc0-zkvm = { version = "0.20.0-rc.2", default-features = false }
tokio = { version = "1.35", features = ["full"] }
