[package]
name = "bonsai-ethereum-relay-cli"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
ethers-solc = "1.0.2"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
bonsai-ethereum-relay = { git = "https://github.com/risc0/risc0.git", rev = "b69ff7ac5dd7c341430aab1abddf671cc362a3ca" }
bonsai-sdk-alpha = { package = "bonsai-sdk", git = "https://github.com/risc0/risc0", rev = "b69ff7ac5dd7c341430aab1abddf671cc362a3ca", features = ["async"] }
bonsai-starter-methods = { path = "../methods" }
bytemuck = "1.13.1"
clap = { version = "4.3", features = ["derive", "env"] }
ethers = { version = "=2.0.2", features = ["rustls", "ws"] }
ethers-signers = { version = "=2.0.2", features = ["aws"] }
hex = "0.4.3"
risc0-build = { git = "https://github.com/risc0/risc0", rev = "b69ff7ac5dd7c341430aab1abddf671cc362a3ca", features = ["guest-list"] }
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "b69ff7ac5dd7c341430aab1abddf671cc362a3ca", default-features = false, features = ["prove"] }
tokio = { version = "1.19", features = ["full", "sync"] }

[features]
solidity_compile = []
