[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "is-even"
path = "src/bin/is_even.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "1.0", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "1.0" }
risc0-zkvm = { version = "2.0.2", default-features = false, features = ['std'] }

[profile.release]
lto = "thin"
